WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69132
[Qt][WK2] First test always fails because of useless xcb dump
https://bugs.webkit.org/show_bug.cgi?id=69132
Summary
[Qt][WK2] First test always fails because of useless xcb dump
Csaba Osztrogonác
Reported
2011-09-29 23:58:54 PDT
It is true for the first test and the first test in the second running:
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20WebKit2/r96391%20%2812609%29/results.html
-
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20WebKit2/r96391%20(12609)/http/tests/cache/post-redirect-get-pretty-diff.html
-
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20WebKit2/r96391%20(12609)/fast/text/text-between-two-brs-in-nowrap-overflow-pretty-diff.html
+Successfully connected to display :7.0 + +Information of screen 253: + width.........: 1024 + height........: 768 + depth.........: 24 + white pixel...: ffffff + black pixel...: 0 +
Attachments
Patch
(6.70 KB, patch)
2011-09-30 07:40 PDT
,
Tor Arne Vestbø
no flags
Details
Formatted Diff
Diff
Patch
(3.68 KB, patch)
2011-09-30 12:41 PDT
,
Tor Arne Vestbø
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tor Arne Vestbø
Comment 1
2011-09-30 03:44:28 PDT
This is due to printfs in the Qt xcb platform plugin. I've talked to Samuel about replacing them with qDebug() so we can intercept them with our message handler.
Tor Arne Vestbø
Comment 2
2011-09-30 04:49:51 PDT
Fix for Qt in the review pipeline, but we need some changes in DRT/WTR as well. Patch coming.
Tor Arne Vestbø
Comment 3
2011-09-30 07:40:35 PDT
Created
attachment 109298
[details]
Patch
Tor Arne Vestbø
Comment 4
2011-09-30 12:41:50 PDT
Created
attachment 109326
[details]
Patch
Tor Arne Vestbø
Comment 5
2011-09-30 12:43:00 PDT
Comment on
attachment 109326
[details]
Patch Hmm, webkit-patch didn't behave like expected :/
Tor Arne Vestbø
Comment 6
2011-09-30 13:05:43 PDT
Landed in
r96417
Tor Arne Vestbø
Comment 7
2011-09-30 13:28:38 PDT
Actually, we still need to wait for the fix in Qt
Csaba Osztrogonác
Comment 8
2011-10-01 00:21:47 PDT
(In reply to
comment #7
)
> Actually, we still need to wait for the fix in Qt
Please let me know if "git submodule foreach update" will give us a Qt revision with fix for this bug.
Tor Arne Vestbø
Comment 9
2011-10-03 04:57:49 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > Actually, we still need to wait for the fix in Qt > > Please let me know if "git submodule foreach update" will give us a Qt revision with fix for this bug.
It hasn't propagated to the mother-repo yet, but you can checkout 95dfb6e668e88d006b00b69917c34ef07bdf8830 in qtbasae.
Csaba Osztrogonác
Comment 10
2011-10-05 07:30:12 PDT
***
Bug 69420
has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 11
2011-10-05 07:58:38 PDT
The bot was updated, and the Qt fix works.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug