[Qt] Prevent qDebug() output from DRT and WTR unless --verbose

For DRT we didn't install the message handler early enough to
catch output while constructing the QApplication. For WTR we
didn't even install a message handler.

Since the UI process will forward any output from the web process
we set an environment variable QT_WEBKIT_SUPPRESS_WEB_PROCESS_OUTPUT
in WTR before the web process is started. This is picked up by the
web process which installs its own message handler.

The environment variable can be overriden on the command line if you
want to see output from the web process, or you can pass --verbose to
WTR to see output from both processes.

https://bugs.webkit.org/show_bug.cgi?id=69132

Reviewed by Andreas Kling.

Canonical link: https://commits.webkit.org/85179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96417 268f45cc-cd09-0410-ab3c-d52691b4dbfc