Tools/DumpRenderTree/qt/main.cpp
@@ -136,6 +136,20 @@ int main(int argc, char* argv[])
     _setmode(2, _O_BINARY);
 #endif
 
+    // Suppress debug output from Qt if not started with -v
+    bool suppressQtDebugOutput = true;
+    for (int i = 1; i < argc; ++i) {
+        if (!qstrcmp(argv[i], "-v")) {
+            suppressQtDebugOutput = false;
+            break;
+        }
+    }
+
+    // Has to be done before QApplication is constructed in case
+    // QApplication itself produces debug output.
+    if (suppressQtDebugOutput)
+        qInstallMsgHandler(messageHandler);
+
 #ifdef Q_WS_X11
     FcInit();
     WebCore::DumpRenderTree::initializeFonts();
@@ -177,7 +191,7 @@ int main(int argc, char* argv[])
 #endif
 
     QStringList args = app.arguments();
-    if (args.count() < 2) {
+    if (args.count() < (!suppressQtDebugOutput ? 3 : 2)) {
         printUsage();
         exit(1);
     }
@@ -185,16 +199,9 @@ int main(int argc, char* argv[])
     // Remove the first arguments, it is application name itself
     args.removeAt(0);
 
-    // Suppress debug output from Qt if not started with -v
-    int index = args.indexOf(QLatin1String("-v"));
-    if (index == -1) 
-        qInstallMsgHandler(messageHandler);
-    else
-        args.removeAt(index);
-
     WebCore::DumpRenderTree dumper;
 
-    index = args.indexOf(QLatin1String("--pixel-tests"));
+    int index = args.indexOf(QLatin1String("--pixel-tests"));
     if (index != -1) {
         dumper.setDumpPixels(true);
         args.removeAt(index);
